Implementação do middleware de owner do item e melhorias no código
