# src/models/itemModel.js
@@ -1,5 +1,5 @@
 class Item {
-    constructor(id, gameId, type, name, quality, description, price, contact) {
+    constructor(id, gameId, type, name, quality, description, price, contact, createdBy) {
         this.id = id;
         this.gameId = gameId;
         this.type = type;
@@ -8,6 +8,7 @@ class Item {
         this.description = description;
         this.price = price;
         this.contact = contact;
+        this.createdBy = createdBy;
     }
 }
 
