# src/routes/itemRoutes.js
@@ -1,9 +1,15 @@
 const express = require('express');
-const { getItems, createItem } = require('../controllers/itemController');
+const { getItems, createItem, updateItem, deleteItem, getItemsByGameName } = require('../controllers/itemController');
+const { authenticateToken } = require('../middlewares/authMiddleware');
+const { verifyItemOwnershipMiddleware } = require('../middlewares/verifyItemOwnershipMiddleware');
 
 const router = express.Router();
 
 router.get('/get-all-items', getItems);
-router.post('/update-item', createItem);
+router.post('/post-new-item', authenticateToken, createItem);
+router.put('/update-item/:id', authenticateToken, verifyItemOwnershipMiddleware, updateItem);
+router.delete('/delete-item/:id', authenticateToken, verifyItemOwnershipMiddleware, deleteItem);
+router.get('/items/by-game-name/:gameName', getItemsByGameName);
+
 
 module.exports = router;
